fix: check for `overflow: clip` support

--- a/src/common/MainNavBars/styles.less
+++ b/src/common/MainNavBars/styles.less
@@ -5,11 +5,15 @@
 .main-nav-bars-container {
     position: relative;
     z-index: 0;
-    overflow: clip;
+    overflow: hidden;
     margin-left: var(--safe-area-inset-left, 0px);
     margin-right: var(--safe-area-inset-right, 0px);
     width: calc(100% - var(--safe-area-inset-left, 0px) - var(--safe-area-inset-right, 0px));
     height: 100%;
+
+    @supports (overflow: clip) {
+        overflow: clip;
+    }
 
     .horizontal-nav-bar {
         position: absolute;
@@ -58,8 +62,11 @@
         }
 
         &.no-overflow {
-            overflow: clip;
             overflow: hidden;
+
+            @supports (overflow: clip) {
+                overflow: clip;
+            }
         }
     }
 }
